# amnezia-cluster-api

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: a47004e8d45f_fix_peer_endpoint_uniqueness.py  acc7ec018e13_change_auth_model_to_apikey_delete_.py  e7b0fb25b8e9_add_unique_constraint_and_remove_name_.py
src/: Dockerfile  main.py
src/api/v1/auth/: router.py  schemas.py
src/api/v1/clients/: router.py  schemas.py
src/api/v1/clients/crud/: create.py  delete.py  logger.py  read.py  update.py
src/api/v1/peers/: schemas.py  utils.py
src/api/v1/peers/crud/: create.py  delete.py  read.py  update.py
src/api/v1/server/: router.py
src/database/: connection.py  models.py
src/database/management/default/: admin_data.py  api_key_data.py  protocol_data.py
src/database/management/operations/: admin.py  api_key.py  client.py  peer.py  protocol.py
src/management/: protocols.yaml  security.py  settings.py
src/minio/: client.py  connection.py
src/redis/: client.py  connection.py
src/services/: amnezia_service.py  clients_service.py  host_service.py  peers_service.py
src/services/management/: amnezia_config_generator.py  amnezia_connection.py  base_protocol_service.py  config_generator.py  container_connection.py  protocol_factory.py  schemas.py
src/services/protocols/: __init__.py
src/services/protocols/amneziawg2/: __init__.py  amneziawg2_config_generator.py  amneziawg2_connection.py  amneziawg2_service.py
src/services/utils/: config_storage.py
