[project]
name = "amnezia-api"
version = "0.1.0"
description = ""
authors = [
    {name = "homostultus39",email = "homostultus39@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "minio (>=7.2.9,<8.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "docker (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.poetry]
packages = [{include = "amnezia_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
